upgrade detox to v18
disable auto-synchronization - broken in detox v18+
add helper methods for setting picker and datetimepicker
add helper method for openAndTapDrawerMenuItemByLabel
add short wait before pressing buttons
close drawer on logout
customize detox-expo-helpers - fix outstanding issues and allow custom params
import util methods individually

--- a/generators/app/templates/.detoxrc.json.ejs
+++ b/generators/app/templates/.detoxrc.json.ejs
@@ -1,12 +1,5 @@
 {
   "configurations": {
-    "ios.sim.debug": {
-      "binaryPath": "e2e/Exponent.app",
-      "type": "ios.simulator",
-      "device": {
-        "type": "iPhone 11"
-      }
-    },
     "ios.sim.release": {
       "binaryPath": "e2e/Exponent.app",
       "type": "ios.simulator",
@@ -27,6 +20,6 @@
       }
     }
   },
-  "test-runner": "mocha",
-  "runner-config": "./e2e/.mocharc.json"
+  "test-runner": "jest",
+  "runner-config": "./e2e/config.json"
 }
