--- a/generators/app/templates/.eslintrc.js.ejs
+++ b/generators/app/templates/.eslintrc.js.ejs
@@ -17,13 +17,13 @@ module.exports = {
     __DEV__: 'readonly',
     FormData: 'readonly',
     React$Element: 'readonly',
-    before: 'readonly',
+    beforeAll: 'readonly',
     beforeEach: 'readonly',
     by: 'readonly',
     element: 'readonly',
     it: 'readonly',
     device: 'readonly',
-    after: 'readonly',
+    afterAll: 'readonly',
     afterEach: 'readonly',
   },
 }
