--- a/generators/app/templates/e2e/home-screen.spec.js.ejs
+++ b/generators/app/templates/e2e/home-screen.spec.js.ejs
@@ -1,8 +1,8 @@
-const Utils = require('./utils')
+const { reloadApp } = require('./utils')
 
 describe('Home Screen Tests', () => {
   beforeEach(async () => {
-    await Utils.reloadApp()
+    await reloadApp()
   })
 
   it('should have welcome screen', async () => {
