--- a/generators/app/templates/app/modules/home/home-screen.js.ejs
+++ b/generators/app/templates/app/modules/home/home-screen.js.ejs
@@ -18,13 +18,13 @@ function HomeScreen(props) {
           <Text style={styles.welcomeText}>Welcome to your JHipster React Native app.</Text>
         </View>
         {account && account.login ? (
-          <View style={[styles.authContainer, styles.authContainerTrue]}>
+          <View style={[styles.authContainer, styles.authContainerTrue]} testID="authDisplayTrue">
             <Text style={styles.authText}>
               <Ionicons name="md-checkmark-circle" size={22} color={'white'} /> You are signed in as {account.login}
             </Text>
           </View>
         ) : (
-          <View style={[styles.authContainer, styles.authContainerFalse]}>
+          <View style={[styles.authContainer, styles.authContainerFalse]} testID="authDisplayFalse">
             <Text style={styles.authText}>
               <Ionicons name="md-information-circle" size={22} color={'white'} /> You are not signed in.
             </Text>
