--- a/generators/app/templates/e2e/account/change-password-screen.spec.js.ejs
+++ b/generators/app/templates/e2e/account/change-password-screen.spec.js.ejs
@@ -1,48 +1,45 @@
-const Utils = require('../utils');
+const { reloadApp, loginAsUser, logout, tapFirstElementById, tapFirstElementByLabel, waitForElementToBeVisibleByLabel, waitForElementToBeVisibleById, openAndTapDrawerMenuItemByLabel, waitThenTapButton } = require('../utils');
 
 describe('Change Password Screen Tests', () => {
   const password = process.env.E2E_PASSWORD || 'user';
   const updatedPassword = process.env.E2E_NEW_PASSWORD || 'new-password';
 
-  before(async () => {
-    await Utils.reloadApp();
-    await Utils.loginAsUser();
+  beforeAll(async () => {
+    await reloadApp();
+    await loginAsUser();
   });
-  after(async () => {
-    await Utils.logout();
+
+  afterAll(async () => {
+    await logout();
   });
 
   beforeEach(async () => {
-    await Utils.reloadApp();
-    await navigateToChangePasswordScreen();
+    await reloadApp();
+    await openAndTapDrawerMenuItemByLabel('Change Password');
+    await waitForElementToBeVisibleById('changePasswordScreen');
   });
-
-  const navigateToChangePasswordScreen = async () => {
-    await Utils.tapFirstElementByLabel('Menu Button');
-    await Utils.tapFirstElementByLabel('Change Password');
-  };
 
   const changePassword = async (oldPassword, newPassword) => {
     await element(by.id('currentPasswordInput')).replaceText(oldPassword);
     await element(by.id('newPasswordInput')).replaceText(newPassword);
     await element(by.id('confirmPasswordInput')).replaceText(newPassword);
-    await element(by.id('changePasswordSubmitButton')).tap();
+    await waitThenTapButton('changePasswordSubmitButton')
   };
 
   it('should display a success message on change password success', async () => {
     const expectedLabel = 'Password changed';
     await changePassword(password, updatedPassword);
-    await Utils.waitForElementToBeVisibleByLabel(expectedLabel);
+    await waitForElementToBeVisibleByLabel(expectedLabel);
     await expect(element(by.label(expectedLabel))).toBeVisible();
     await changePassword(updatedPassword, password);
-    await Utils.waitForElementToBeVisibleByLabel(expectedLabel);
+    await waitForElementToBeVisibleByLabel(expectedLabel);
     await expect(element(by.label(expectedLabel))).toBeVisible();
   });
 
   it('should display an error message on change password failure', async () => {
     const expectedLabel = 'Incorrect password';
     await changePassword('invalid-password', 'invalid-password');
-    await Utils.waitForElementToBeVisibleByLabel(expectedLabel);
+    await waitForElementToBeVisibleByLabel(expectedLabel);
     await expect(element(by.label(expectedLabel))).toBeVisible();
   });
 });
