--- a/generators/app/templates/e2e/account/login-screen.spec.js.ejs
+++ b/generators/app/templates/e2e/account/login-screen.spec.js.ejs
@@ -1,25 +1,26 @@
-const Utils = require('../utils');
+const { reloadApp, loginAsUser, logout, tapFirstElementById, tapFirstElementByLabel, waitForElementToBeVisibleById, waitForElementToBeVisibleByLabel, navigateToLoginScreen, waitThenTapButton } = require('../utils');
 
 describe('Login Screen Tests', () => {
   beforeEach(async () => {
-    await Utils.reloadApp();
+    await reloadApp();
   });
 
   it('should show an alert on log in failure', async () => {
-    await Utils.navigateToLoginScreen();
+    await navigateToLoginScreen();
     await element(by.id('loginScreenUsername')).replaceText('invalid');
     await element(by.id('loginScreenPassword')).replaceText('invalid');
-    await element(by.id('loginScreenLoginButton')).tap();
+    await waitThenTapButton('loginScreenLoginButton')
     const expectedLabel = 'Bad credentials';
-    await Utils.waitForElementToBeVisibleByLabel(expectedLabel);
+    await waitForElementToBeVisibleByLabel(expectedLabel);
     await expect(element(by.label(expectedLabel))).toBeVisible();
   });
 
   it('should log in and log out as user successfully', async () => {
-    await Utils.loginAsUser();
-    await Utils.tapFirstElementByLabel('Menu Button');
-    await expect(element(by.label('Logout'))).toExist();
-    await Utils.tapFirstElementByLabel('Logout');
-    await expect(element(by.label('Login'))).toExist();
+    await loginAsUser();
+    await waitForElementToBeVisibleById('homeScreen');
+    await expect(element(by.id('authDisplayTrue'))).toBeVisible();
+    await logout();
+    await waitForElementToBeVisibleById('homeScreen');
+    await expect(element(by.id('authDisplayFalse'))).toBeVisible();
   });
 });
