--- a/generators/app/templates/e2e/utils.js.ejs
+++ b/generators/app/templates/e2e/utils.js.ejs
@@ -2,18 +2,45 @@ const DetoxExpoHelpers = require('detox-expo-helpers');
 
 const username = process.env.E2E_USERNAME || 'user';
 const password = process.env.E2E_PASSWORD || 'user';
+const expoPublishedUrl = process.env.E2E_EXPO_URL || 'exp://localhost:19000';
+
+const wait = (ms) => new Promise((resolve) => setTimeout(resolve, ms));
+
+const waitThenTapButton = async (buttonId, ms = 1000) => {
+  await wait(ms);
+  await element(by.id(buttonId)).tap();
+};
+
+const openAndTapDrawerMenuItemByLabel = async (label) => {
+  await tapFirstElementById('drawerButton');
+  await waitForElementToBeVisibleById('drawerContentScrollView');
+  await tapFirstElementByLabel(label);
+};
+
+const setDateTimePickerValue = async (elementId, dateString, dateFormat) => {
+  await waitThenTapButton(elementId);
+  await waitForElementToBeVisibleById(`${elementId}Modal`);
+  await element(by.id(`${elementId}Modal`)).setDatePickerDate(dateString, dateFormat);
+  await tapFirstElementByLabel('Confirm');
+  await tapFirstElementByLabel('Confirm');
+};
+
+const setPickerValue = async (elementId, value) => {
+    await waitThenTapButton(elementId);
+    await element(by.id(`${elementId}Picker`)).setColumnToValue(0, value);
+    await waitThenTapButton(`${elementId}PickerDone`);
+};
 
 const navigateToLoginScreen = async () => {
-  await tapFirstElementByLabel('Menu Button');
-  await tapFirstElementByLabel('Login');
-  await expect(element(by.id('loginScreenUsername'))).toBeVisible();
+  await openAndTapDrawerMenuItemByLabel('Login');
+  await waitForElementToBeVisibleById('loginScreenUsername');
 };
 
 const loginAsUser = async () => {
   await navigateToLoginScreen();
   await element(by.id('loginScreenUsername')).replaceText(username);
   await element(by.id('loginScreenPassword')).replaceText(password);
-  await element(by.id('loginScreenLoginButton')).tap();
+  await waitThenTapButton('loginScreenLoginButton');
   try {
     await waitForElementToBeVisibleById('homeScreen')
   } catch (e) {
@@ -22,8 +49,7 @@ const loginAsUser = async () => {
 };
 
 const logout = async () => {
-  await tapFirstElementByLabel('Menu Button');
-  await tapFirstElementByLabel('Logout');
+  await openAndTapDrawerMenuItemByLabel('Logout');
 };
 
 const goBack = async () => {
@@ -49,8 +75,20 @@ const scrollTo = async (fieldId, listId, size = 0.15, direction = 'up', speed = 
     .scroll(600, 'down');
 };
 
+const tapFirstElementById = async (id) => {
+  try {
+    await element(by.id(id)).atIndex(0).tap();
+  } catch (e) {
+    console.warn(`Could not tap on element with ID: ${id}`);
+  }
+};
+
 const tapFirstElementByLabel = async (label) => {
-  await element(by.label(label)).atIndex(0).tap();
+  try {
+    await element(by.label(label)).atIndex(0).tap();
+  } catch (e) {
+    console.warn(`Could not tap on element with label: ${label}`);
+  }
 };
 
 const waitForElementToBeVisibleByLabel = async (elementLabel, timeout = 5000) => {
@@ -63,11 +101,12 @@ const waitForElementToBeVisibleById = async (elementId, timeout = 5000) => {
 
 const reloadApp = async (bailOnFailure) => {
   try {
-    await DetoxExpoHelpers.reloadApp();
+    // disabling Detox synchronization - broken for Expo apps in Detox 18+, speeds up tests at the cost of using waitFor
+    await DetoxExpoHelpers.reloadApp({ url: expoPublishedUrl, launchArgs: { detoxEnableSynchronization: false } });
     // if you eject from expo, you should replace the line above with:
     // device.reloadReactNative()
     await waitForElementToBeVisibleById('homeScreen', 15000);
-    await waitForElementToBeVisibleByLabel('Menu Button', 15000);
+    await waitForElementToBeVisibleById('drawerButton', 15000);
   } catch (e) {
     console.warn('Reloading app failed, retrying once');
     console.warn(e);
@@ -78,11 +117,17 @@ const reloadApp = async (bailOnFailure) => {
 };
 
 module.exports = {
+  wait,
+  waitThenTapButton,
+  setDateTimePickerValue,
+  setPickerValue,
+  openAndTapDrawerMenuItemByLabel,
   navigateToLoginScreen,
   loginAsUser,
   goBack,
   logout,
   scrollTo,
+  tapFirstElementById,
   tapFirstElementByLabel,
   waitForElementToBeVisibleById,
   waitForElementToBeVisibleByLabel,
