install expo app before tests, add wait for picker util and chat tests

--- a/generators/app/templates/app/modules/chat/chat-screen.js.ejs
+++ b/generators/app/templates/app/modules/chat/chat-screen.js.ejs
@@ -27,7 +27,7 @@ function ChatScreen(props) {
 
   const renderRow = (item, index) => {
     return (
-      <View style={styles.row} key={index}>
+      <View style={styles.row} key={index} testID={`message-${index}`}>
         <Text style={styles.boldLabel}>{item.user}</Text>
         <Text>{item.message}</Text>
       </View>
