--- a/generators/app/templates/e2e/scripts/setup.sh.ejs
+++ b/generators/app/templates/e2e/scripts/setup.sh.ejs
@@ -1,10 +1,20 @@
 #!/usr/bin/env bash
 set -uo pipefail
 
-SCRIPTS_DIR=$(dirname $0)
-
 echo 'Checking for Expo App...'
-$SCRIPTS_DIR/download-expo.sh
+./e2e/scripts/download-expo.sh
+
+# get ios device name from detox config
+IOS_DEVICE_NAME=$(cat .detoxrc.json | jq -rc '.configurations | .[] | .device | .type')
+# get simulator matching that name
+DEVICE_ID=$(xcrun simctl list devices -j | jq -rc ".[] | .[] | .[] | select( .name == \"$IOS_DEVICE_NAME\" )  | select( .isAvailable == true ) | .udid")
+
+# boot emulator
+echo "Booting emulator: $DEVICE_ID"
+xcrun simctl boot $DEVICE_ID
+# install Exponent app
+echo "Installing Exponent App"
+xcrun simctl install $DEVICE_ID e2e/Exponent.app
 
 echo 'Fetching App Bundle from Expo Packager...'
 # warm up the app - prebuild the bundle with dev=false and minify=true, otherwise it times out at start of detox test
