--- a/generators/app/templates/package.json.ejs
+++ b/generators/app/templates/package.json.ejs
@@ -15,7 +15,7 @@
     "precommit": "lint-staged",
     <%_ } _%>
     <%_ if (context.detox) { _%>
-    "start:e2e": "expo start --no-dev --minify --ios",
+    "start:e2e": "expo start --no-dev --minify",
     "test:e2e": "./e2e/scripts/setup.sh && detox test --configuration ios.sim.release --retries 3",
     <%_ } _%>
     "postinstall": "patch-package",
