remove component usage, lint, more e2e test fixes
use a swipe to open the side menu since matching it is flaky on CI
wait for picker and datepicker to disappear before moving on in tests
migrate alert-message and entities-screen to functions
deconstruct props rather than using props prefix

--- a/generators/app/templates/app/modules/entities/entities-screen.js.ejs
+++ b/generators/app/templates/app/modules/entities/entities-screen.js.ejs
@@ -1,32 +1,15 @@
-import React from 'react'
-import { ScrollView, Text } from 'react-native'
-import { connect } from 'react-redux'
+import React from 'react';
+import { ScrollView, Text } from 'react-native';
 // Styles
-import RoundedButton from '../../shared/components/rounded-button/rounded-button'
+import RoundedButton from '../../shared/components/rounded-button/rounded-button';
 
-import styles from './entities-screen.styles'
+import styles from './entities-screen.styles';
 
-class EntitiesScreen extends React.Component {
-  render () {
-    return (
-      <ScrollView style={styles.container} contentContainerStyle={styles.paddedScrollView} testID="entityScreenScrollList">
-        <Text style={styles.centerText}>JHipster Entities will appear below</Text>
-        {/* jhipster-react-native-entity-screen-needle */}
-      </ScrollView>
-    )
-  }
+export default function EntitiesScreen({ navigation }) {
+  return (
+    <ScrollView style={styles.container} contentContainerStyle={styles.paddedScrollView} testID="entityScreenScrollList">
+      <Text style={styles.centerText}>JHipster Entities will appear below</Text>
+      {/* jhipster-react-native-entity-screen-needle */}
+    </ScrollView>
+  );
 }
-
-const mapStateToProps = (state) => {
-  return {
-    // for developer convenience
-  }
-}
-
-const mapDispatchToProps = (dispatch) => {
-  return {
-    // for developer convenience
-  }
-}
-
-export default connect(mapStateToProps, mapDispatchToProps)(EntitiesScreen)
