--- a/generators/app/templates/app/navigation/drawer/drawer-button.js.ejs
+++ b/generators/app/templates/app/navigation/drawer/drawer-button.js.ejs
@@ -24,18 +24,18 @@ export const DrawerButton = (props) => {
   // hide the menu button since it's permanent on large screens
   const largeScreen = false; //dimensions.width >= 768;
   return largeScreen ? null : (
-    <View style={styles.wrapper}>
+    <View style={styles.wrapper} testID={'drawerButtonWrapper'}>
       <TouchableItem
         testID={'drawerButton'}
         onPress={toggleDrawer}
-        accessibilityLabel={'Drawer Button Wrapper'}
+        accessibilityLabel={'Drawer Button'}
         style={styles.touchableItem}
         hitSlop={Platform.select({
           ios: undefined,
           default: { top: 16, right: 16, bottom: 16, left: 16 },
         })}>
         {/* Button Image */}
-        <Image source={Images.toggleDrawerIcon} accessibilityLabel={'Drawer Button'} style={styles.image} />
+        <Image source={Images.toggleDrawerIcon} style={styles.image} />
       </TouchableItem>
     </View>
   );
