--- a/generators/app/templates/e2e/account/change-password-screen.spec.js.ejs
+++ b/generators/app/templates/e2e/account/change-password-screen.spec.js.ejs
@@ -1,4 +1,12 @@
-const { reloadApp, loginAsUser, logout, tapFirstElementById, tapFirstElementByLabel, waitForElementToBeVisibleByLabel, waitForElementToBeVisibleById, openAndTapDrawerMenuItemByLabel, waitThenTapButton } = require('../utils');
+const {
+  reloadApp,
+  loginAsUser,
+  logout,
+  waitForElementToBeVisibleByLabel,
+  waitForElementToBeVisibleById,
+  openAndTapDrawerMenuItemByLabel,
+  waitThenTapButton,
+} = require('../utils');
 
 describe('Change Password Screen Tests', () => {
   const password = process.env.E2E_PASSWORD || 'user';
