--- a/generators/app/templates/e2e/account/login-screen.spec.js.ejs
+++ b/generators/app/templates/e2e/account/login-screen.spec.js.ejs
@@ -1,4 +1,12 @@
-const { reloadApp, loginAsUser, logout, tapFirstElementById, tapFirstElementByLabel, waitForElementToBeVisibleById, waitForElementToBeVisibleByLabel, navigateToLoginScreen, waitThenTapButton } = require('../utils');
+const {
+  reloadApp,
+  loginAsUser,
+  logout,
+  waitForElementToBeVisibleById,
+  waitForElementToBeVisibleByLabel,
+  navigateToLoginScreen,
+  waitThenTapButton,
+} = require('../utils');
 
 describe('Login Screen Tests', () => {
   beforeEach(async () => {
