--- a/generators/app/templates/e2e/account/settings-screen.spec.js.ejs
+++ b/generators/app/templates/e2e/account/settings-screen.spec.js.ejs
@@ -1,4 +1,12 @@
-const { reloadApp, loginAsUser, logout, tapFirstElementById, tapFirstElementByLabel, waitForElementToBeVisibleByLabel, openAndTapDrawerMenuItemByLabel, waitForElementToBeVisibleById, waitThenTapButton } = require('../utils');
+const {
+  reloadApp,
+  loginAsUser,
+  logout,
+  waitForElementToBeVisibleByLabel,
+  openAndTapDrawerMenuItemByLabel,
+  waitForElementToBeVisibleById,
+  waitThenTapButton,
+} = require('../utils');
 
 describe('Settings Screen Tests', () => {
   beforeAll(async () => {
