update dependencies for generator and app, fix docs link

--- a/generators/app/templates/app/modules/home/learn-more-links.component.js.ejs
+++ b/generators/app/templates/app/modules/home/learn-more-links.component.js.ejs
@@ -54,7 +54,7 @@ const links = [
   {
     id: 6,
     title: 'Navigation',
-    link: 'https://wix.github.io/react-native-navigation/#/docs/Usage',
+    link: 'https://reactnavigation.org/docs/getting-started',
     description: 'How to handle moving between screens inside your application.',
   },
   {
