replace import-jdl with jdl (old command works, but is less hip)

--- a/generators/app/templates/README.md.ejs
+++ b/generators/app/templates/README.md.ejs
@@ -53,7 +53,7 @@ jhipster --blueprints react-native entity <name>
 Or to import JDL:
 
 ```bash
-jhipster --blueprints react-native import-jdl <file.jdl>
+jhipster --blueprints react-native jdl <file.jdl>
 ```
 
 <%_ if (context.authenticationType === 'oauth2') { _%>
