--- a/generators/heroku/templates/Procfile.ejs
+++ b/generators/heroku/templates/Procfile.ejs
@@ -1,1 +1,1 @@
-web: npx http-server web-build --proxy http://localhost:$PORT?
+web: npx http-server web-build --brotli --proxy http://localhost:$PORT?
