--- a/generators/app/templates/package.json.ejs
+++ b/generators/app/templates/package.json.ejs
@@ -141,7 +141,7 @@
     "preset": "jest-expo"
   },
   "engines": {
-    "node": "14.x",
-    "npm": "6.x"
+    "node": ">=12.x",
+    "npm": ">=6.x"
   }
 }
